@@ -13,11 +13,29 @@ By default, this will always fetch the latest stable version.
 
 Go grab some coffee in the mean time, or read on...
 
+## Use a mirror to fetch dependencies
+
+In your `~/.m2/settings.xml`, add a mirror:
+```xml
+<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+ http://maven.apache.org/xsd/settings-1.0.0.xsd">
+ <mirrors>
+   <mirror>
+     <id>artifactory-georchestra</id>
+     <mirrorOf>*</mirrorOf>
+     <url>https://packages.georchestra.org/artifactory/maven</url>
+   </mirror>
+ </mirrors>
+</settings>
+```
+
 ## Install the dependencies
 
 You should install the required packages:
 ```
-sudo apt-get install python-virtualenv openjdk-7-jdk ant ant-optional
+sudo apt-get install python-virtualenv openjdk-8-jdk ant ant-optional
 ```
 
 ## Build the modules
@@ -25,11 +43,6 @@ sudo apt-get install python-virtualenv openjdk-7-jdk ant ant-optional
 Building your SDI is just few command-lines away.
 ```
 cd ~/georchestra
-```
-
-If your JDK version is < 8:
-```
-export MAVEN_OPTS="-XX:MaxPermSize=512M"
 ```
 
 Build Geonetwork
